--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="\style.css">
   </head>
   <body>
-   <div class="upcard">
-     <div class="piccard"></div>
+   <div class="card">
+     <div class="upcard"></div>
      <div class="botcard">
+       <h2>Order Summary</h2>
+       <p>You can no listen to millions og songs, audiobooks, and podcasts on any devuce abywhere you like!</p>
 
      </div>
 
