--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="\style.css">
+    <link rel="stylesheet" href="C:\Users\PSO\Documents\GitHub\project\style.css">
   </head>
   <body>
    <div class="card">
      <div class="upcard"></div>
      <div class="botcard">
        <h2>Order Summary</h2>
-       <p>You can no listen to millions og songs, audiobooks, and podcasts on any devuce abywhere you like!</p>
+       You can now listen to millions of <br>
+       songs, audiobooks, and podcasts on<br>
+       any device anywhere you like!</p>
+       <div class="plancard">
+
+       </div>
+       <button type="button"class="paybutton" name="paybutton">Proceed to Payment</button>
+       <button type="button" class="canbutton"name="canbutton">Cancel Order</button>
 
      </div>
 
