--- a/index.html
+++ b/index.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="C:\Users\PSO\Documents\GitHub\project\css\style.css">
-  </head>
-  <body>
-   <div class="card">
-     <div class="upcard"></div>
-     <div class="botcard">
-       <h2>Order Summary</h2>
-       You can now listen to millions of <br>
-       songs, audiobooks, and podcasts on<br>
-       any device anywhere you like!</p>
-       <div class="plancard">
 
-       </div>
-       <button type="button"class="paybutton" name="paybutton">Proceed to Payment</button>
-       <button type="button" class="canbutton"name="canbutton">Cancel Order</button>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href=".\css\style.css">
+</head>
 
-     </div>
+<body>
+  <!-- <img src=".\images\pattern-background-desktop.svg" alt=""> -->
+  <div class="card">
+    <div class="card-top">
+      <img src=".\images\illustration-hero.svg" alt="">
+    </div>
+    <div class="card-bottom">
+      <h2>Order Summary</h2>
+      <table>
+        <tr>
+          <tr> <center><font style="color:#85989B">You can now listen to millions of songs,</center></tr>
+          <tr><center>audiobooks, and podcasts on any device</center></tr>
+          <tr><center> anywhere you like!</center></tr>
+        </tr>
+        </p>
+      </table>
+      <div class="card-plan">
+        <tr>
+          <td><img src=".\images\icon-music.svg" alt=""></td>
+          <td> <table>
+            <td>
+              Annual Plan
+            </td>
+            <tr>
+              <font style="color:#85989B">$59.99/year
+            </tr>
 
-   </div>
-  </body>
+          </table></td>
+
+          <td> <a href="#">Change</a></td>
+        </tr>
+
+      </div>
+      <button type="button" class="btn-pay" name="paybutton">Proceed to Payment</button>
+      <button type="button" class="btn-cancel" name="canbutton">Cancel Order</button>
+    </div>
+  </div>
+</body>
 </html>
